# autonomouscar_project

./: README.md
autoware_src/core_perception/: ndt_matching.cpp  voxel_grid_filter.cpp
autoware_src/core_planning/: DecisionMaker.cpp  DecisionMaker.h  op_behavior_selector_core.cpp  op_behavior_selector_core.h
autoware_src/docker/: my_run.sh
device_driver/erp42_driver/launch/: erp42_main.launch
device_driver/erp42_driver/src/: erp42_main.cpp
device_driver/gps/gps_launch/: CMakeLists.txt  package.xml
device_driver/imu_vn100_yu/src/: imu_driver_node.cpp
device_driver/myodom/: CMakeLists.txt  package.xml
device_driver/myodom/launch/: myodom.launch
device_driver/myodom/src/: myodom.cpp
device_driver/sensor_launch/: package.xml
device_driver/sensor_launch/launch/: sensor_launch.launch
integration_launch/launch/: erp42_detection.launch  erp42_gps.launch  erp42_integration_planning.launch  erp42_mission_planning.launch  erp42_motion_planning.launch  erp42_planning_detection.launch  erp42_planning_detection_quadtree.launch  gps_launch.launch  initial_pose_launch.launch  integration_launch.launch  mpc_tracker.launch  planning_launch.launch  sensor.launch  sensor_localization.launch  tw_rl_planning.launch  yolo_kw.launch
localizer/fix2gnsspose/: CMakeLists.txt  how_to_install_geographic_lib.txt  package.xml
localizer/fix2gnsspose/launch/: fix2gnsspose_soongsil.launch
localizer/fix2gnsspose/src/: fix2tfpose.cpp
localizer/initial_orientation/: CMakeLists.txt  package.xml
localizer/initial_orientation/src/: orientation.cpp  test_orientation.cpp
localizer/nmea_launch/: CMakeLists.txt  package.xml
localizer/nmea_launch/launch/: nmea_serial_launch_tw.launch
mission_handler/mission_handler_2020/: CMakeLists.txt  package.xml
mission_handler/mission_handler_2020/cfg/: kcity_e_obj.yaml  mission_params_kcity.yaml  mission_params_kcity_2020.yaml  mission_params_lightpark.yaml  mission_params_lightpark_emergency_obj.yaml  mission_params_parkinglot.yaml  mission_params_parkinglot_e_obj.yaml  mission_params_parkinglot_parking.yaml  mission_params_soongsil.yaml
mission_handler/mission_handler_2020/include/mission_handler_2020/: Mission.h  Mission.h.backup  Mission.h.tw_feedback
mission_handler/mission_handler_2020/launch/: mission_manager_kcity.launch  mission_manager_lightpark.launch  mission_manager_lightpark_emergency_obj.1.launch  mission_manager_parkinglot.launch  mission_manager_parkinglot_parking.launch  mission_manager_parkinglot_parking_e_obj.launch  mission_manager_soongsil.launch
mission_handler/mission_handler_2020/src/: IsPointInPolygon.cpp  MissionManager.cpp
planner/erp42_parking_manager/: CMakeLists.txt  package.xml
planner/erp42_parking_manager/launch/: move_base_kcity.launch  move_base_parkinglot.launch  move_base_soongsil.launch
planner/erp42_parking_manager/maps/: parking_lines.csv  pgm_viewer.cpp  pparking.csv  tw_map.yaml  tw_map_parkinglot.yaml  tw_map_soongsil.yaml  xy2navigationsStackPgm.cpp
planner/erp42_parking_manager/param/: costmap_common_params_waffle_pi.yaml  dwa_local_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
planner/goal_initial/src/: goal_initial.cpp
setup_env/: .bashrc  autoconnect_sensor.sh  default.rviz  how_to_set_up_environment.txt  install_dep.sh  run.sh  setup_rviz.sh  yolo.rviz
standalone_programs/detection_tl_labeling/: check_image.py  make_csv_labeling_file.py
standalone_programs/detection_tl_labeling/example/: seoul1.csv  seoul2.csv
standalone_programs/rosbag/: rosbag_to_file.py
standalone_programs/vectormap_builder/: README.md  singleWaypointToOpenplannerVectormap.cpp  soongsil_waypoints.csv  target  tw_tw.csv
standalone_programs/vectormap_builder/dst/: dtlane.csv  lane.csv  node.csv  point.csv
stopline_dist_detector/: CMakeLists.txt  package.xml
stopline_dist_detector/launch/: stopline_dist_detector.launch
stopline_dist_detector/src/: stopline_dist_detector.cpp
test_pkg/cmd_to_twist/: CMakeLists.txt  package.xml
test_pkg/cmd_to_twist/src/: main.cpp
test_pkg/fake_obb_box_sender/: CMakeLists.txt  package.xml
test_pkg/fake_obb_box_sender/src/: fake_sender.cpp
test_pkg/fake_traffic_light_sender_tw/: CMakeLists.txt  package.xml
test_pkg/fake_traffic_sender/: CMakeLists.txt  package.xml
test_pkg/fake_traffic_sender/src/: fake_traffic_sender.cpp
test_pkg/integral_imu_orientation/: CMakeLists.txt  package.xml
test_pkg/poly/: CMakeLists.txt  package.xml
test_pkg/poly/cfg/: poly_area.yaml
test_pkg/send_erp42_speed/: CMakeLists.txt  package.xml
test_pkg/send_erp42_speed/src/: send_erp42_speed.cpp
test_pkg/test_cmd_pub/: CMakeLists.txt  package.xml
test_pkg/test_cmd_pub/launch/: test_cmd.launch
test_pkg/test_cmd_pub/src/: test_cmd_pub.cpp
(+9 files in other folders)
